--- a/custom_components/hive/manifest.json
+++ b/custom_components/hive/manifest.json
@@ -8,8 +8,8 @@
   "homekit": {
     "models": ["HHKBridge*"]
   },
-  "requirements": ["pyhiveapi==0.5.13"],
-  "codeowners": ["@KJonline"],
+  "requirements": ["git+https://github.com/aware/pyhiveapi.git"],
+  "codeowners": ["@aware"],
   "iot_class": "cloud_polling",
   "loggers": ["apyhiveapi"]
 }
