--- a/custom_components/hive/manifest.json
+++ b/custom_components/hive/manifest.json
@@ -8,7 +8,7 @@
   "homekit": {
     "models": ["HHKBridge*"]
   },
-  "requirements": ["git+https://github.com/aware/pyhiveapi.git"],
+  "requirements": ["git+https://github.com/aware/pyhiveapi.git@master"],
   "codeowners": ["@aware"],
   "iot_class": "cloud_polling",
   "loggers": ["apyhiveapi"]
