--- a/custom_components/hive/manifest.json
+++ b/custom_components/hive/manifest.json
@@ -4,11 +4,11 @@
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/hive",
   "issue_tracker": "https://github.com/Pyhass/Hive-Custom-Component/issues",
-  "version": "2021.9.16",
+  "version": "2021.9.17",
   "homekit": {
     "models": ["HHKBridge*"]
   },
-  "requirements": ["git+https://github.com/aware/pyhiveapi.git@master#pyhiveapi==0.5.14"],
+  "requirements": ["git+https://github.com/aware/pyhiveapi.git@aw-1#pyhiveapi==0.5.14"],
   "codeowners": ["@aware"],
   "iot_class": "cloud_polling",
   "loggers": ["apyhiveapi"]
